--- a/camprt.html
+++ b/camprt.html
@@ -19,32 +19,6 @@
             margin: 0px;
         }
 
-        .navbar {
-            overflow: hidden;
-            background-color: #444;
-            position: fixed;
-            top: 0;
-            width: 100%;
-        }
-
-        .navbar a {
-            float: left;
-            display: block;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-size: 17px;
-        }
-
-        #info {
-            position: absolute;
-            top: 0px;
-            width: 100%;
-            padding: 5px;
-            text-align: center;
-        }
-
         #content {
             position: absolute;
             top: 0px;
@@ -62,6 +36,14 @@
             left: 0px;
             width: 100%;
             height: 100%;
+        }
+
+        #dropMenu {
+            position: fixed;
+            opacity: 1.0;
+            top: 20px;
+            right: 20px;
+            z-index: 10;
         }
 
         .list-item {
@@ -102,9 +84,8 @@
     <canvas id="c"></canvas>
 
     <div id="content">
-        <div class="navbar">
-            <div id="dropMenu">
-                <select name="patientMenu" onchange="dropDown(this);">
+        <div id="dropMenu">
+            <select name="patientMenu" onchange="dropDown(this);">
                     <option selected = "selected" value=1>Patient 1</option>
                     <option value = 2>Patient 2</option>
                     <option value = 3>Patient 3</option>
@@ -120,12 +101,11 @@
                     <option value = 13>Patient 13</option>
                     <option value = 14>Patient 14</option>
                     <option value = 15>Patient 15</option>
-                </select>
-            </div>
-
+            </select>
         </div>
-
     </div>
+
+
 
     <script src="build/three.js"></script>
     <script src="js/controls/OrbitControls.js"></script>
