--- a/camprt.html
+++ b/camprt.html
@@ -42,7 +42,7 @@
             position: fixed;
             opacity: 1.0;
             top: 20px;
-            right: 20px;
+            left: 20px;
             z-index: 10;
         }
 
@@ -104,8 +104,6 @@
             </select>
         </div>
     </div>
-
-
 
     <script src="build/three.js"></script>
     <script src="js/controls/OrbitControls.js"></script>
