--- a/camprt.html
+++ b/camprt.html
@@ -41,9 +41,23 @@
         #dropMenu {
             position: fixed;
             opacity: 1.0;
-            top: 20px;
-            left: 20px;
+            top: 10px;
+            left: 10px;
             z-index: 10;
+        }
+
+        select {
+            color: #eee;
+            background-color: #444;
+            font-family: sans-serif;
+            font-size: medium;
+            text-align: center;
+            width: 125px;
+            height: 31px;
+            -webkit-border-radius: 0px;
+            border: 0px;
+            outline: 5px solid #444;
+            outline-offset: -2px;
         }
 
         .list-item {
@@ -75,7 +89,6 @@
             margin-top: 0.5em;
             float: right;
         }
-
     </style>
 </head>
 
@@ -130,7 +143,6 @@
             //console.log(e.value);
             updateOrder(e.value);
         }
-
     </script>
 </body>
 
