--- a/camprt.html
+++ b/camprt.html
@@ -40,10 +40,11 @@
 
         #dropMenu {
             position: fixed;
-            opacity: 1.0;
-            top: 10px;
-            left: 10px;
+            opacity: 0.95;
+            top: 3px;
+            left: 3px;
             z-index: 10;
+            box-shadow: 0px 0px 12px 5px rgba(0, 0, 0, 0.7);
         }
 
         select {
@@ -58,6 +59,33 @@
             border: 0px;
             outline: 5px solid #444;
             outline-offset: -2px;
+        }
+
+        select:active,
+        select:hover {
+            background-color: #666;
+            outline-color: #666;
+        }
+
+        option:checked,
+        option:hover {
+            color: #eee;
+            background-color: #666;
+        }
+
+        #navbar {
+            position: fixed;
+            opacity: 0.95;
+            top: 0px;
+            left: 131px;
+            background-color: #444;
+            width: 100%;
+            height: 37px;
+            border-left-style: solid;
+            border-left-width: 2px;
+            border-left-color: #888;
+            z-index: 10;
+            box-shadow: 3px 0px 13px 2px rgba(0, 0, 0, 0.7);
         }
 
         .list-item {
@@ -116,6 +144,7 @@
                     <option value = 15>Patient 15</option>
             </select>
         </div>
+        <div id="navbar"></div>
     </div>
 
     <script src="build/three.js"></script>
