--- a/camprt.html
+++ b/camprt.html
@@ -52,6 +52,7 @@
             background-color: #444;
             font-family: sans-serif;
             font-size: medium;
+            font-weight: lighter;
             text-align: center;
             width: 125px;
             height: 31px;
@@ -83,9 +84,9 @@
             height: 37px;
             border-left-style: solid;
             border-left-width: 2px;
-            border-left-color: #888;
+            border-left-color: #444;
             z-index: 10;
-            box-shadow: 3px 0px 13px 2px rgba(0, 0, 0, 0.7);
+            box-shadow: 4px 0px 13px 2px rgba(0, 0, 0, 0.7);
         }
 
         .list-item {
