--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         }
 
         select {
+            cursor: pointer;
             color: #eee;
             background-color: #444;
             font-family: sans-serif;
