--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         }
 
         .list-item .scene {
+            cursor: crosshair;
             width: 350px;
             height: 350px;
         }
