--- a/index.html
+++ b/index.html
@@ -91,6 +91,18 @@
             box-shadow: 4px 0px 13px 2px rgba(0, 0, 0, 0.7);
         }
 
+        #details {
+            position: fixed;
+            opacity: 0.95;
+            top: 100px;
+            left: 100px;
+            background-color: #444;
+            width: 100px;
+            height: 150px;
+            z-index: 10;
+            box-shadow: 0px 0px 12px 2px rgba(0, 0, 0, 0.7);
+        }
+
         .list-item {
             position: relative;
             display: inline-block;
@@ -149,6 +161,7 @@
             </select>
         </div>
         <div id="navbar"></div>
+        <!--<div id="details"></div> -->
     </div>
 
     <script src="build/three.js"></script>
