details on demand container

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         #details {
             position: fixed;
             opacity: 0.95;
-            top: 100px;
-            left: 100px;
+            top: -500px;
+            left: -500px;
             background-color: #444;
             width: 100px;
             height: 150px;
@@ -161,7 +161,7 @@
             </select>
         </div>
         <div id="navbar"></div>
-        <!--<div id="details"></div> -->
+        <div id="details"></div>
     </div>
 
     <script src="build/three.js"></script>
