--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
             height: 100%;
         }
 
+        hr {
+            display: block;
+            margin-top: 10px;
+            margin-bottom: 1px;
+            margin-left: auto;
+            margin-right: auto;
+            border-style: inset;
+            border-color: #444;
+            border-width: 1px;
+        }
+
         #dropMenu {
             position: fixed;
             opacity: 0.95;
@@ -94,13 +105,46 @@
         #details {
             position: fixed;
             opacity: 0.95;
-            top: -500px;
-            left: -500px;
+            top: 100px;
+            left: 100px;
             background-color: #444;
-            width: 100px;
-            height: 150px;
+            width: 200px;
             z-index: 10;
             box-shadow: 0px 0px 12px 2px rgba(0, 0, 0, 0.7);
+        }
+
+        #details #details_organName {
+            width: 100%;
+            height: 25px;
+            text-align: center;
+            font-family: sans-serif;
+            font-size: medium;
+            color: #eee;
+            padding: 5% 0%;
+        }
+
+        #details #details_dosePerVolume {
+            width: 100%;
+            height: 25px;
+            text-align: center;
+            font-family: sans-serif;
+            font-size: medium;
+            color: #eee;
+            padding: 5% 0%;
+        }
+
+        #details table {
+            width: 100%;
+            border-collapse: collapse;
+            border-top: 0px solid red;
+        }
+
+        #details td {
+            font-family: sans-serif;
+            font-size: small;
+            color: #eee;
+            padding: 1% 3%;
+            border: 0px solid red;
         }
 
         .list-item {
@@ -161,7 +205,29 @@
             </select>
         </div>
         <div id="navbar"></div>
-        <div id="details"></div>
+        <div id="details">
+            <div id="details_organName">name_of_organ</div>
+            <div id="details_dosePerVolume">dose_per_volume</div>
+            <hr>
+            <table>
+                <tr>
+                    <td style="text-align: right; color: #ccc;">Volume (cc):</td>
+                    <td id="details_volume_val">N/A</td>
+                </tr>
+                <tr>
+                    <td style="text-align: right; color: #ccc;">Mean Dose (GY):</td>
+                    <td id="details_meanDose_val">N/A</td>
+                </tr>
+                <tr>
+                    <td style="text-align: right; color: #ccc;">Min Dose (GY):</td>
+                    <td id="details_minDose_val">N/A</td>
+                </tr>
+                <tr>
+                    <td style="text-align: right; color: #ccc;">Max Dose (GY):</td>
+                    <td id="details_maxDose_val">N/A</td>
+                </tr>
+            </table>
+        </div>
     </div>
 
     <script src="build/three.js"></script>
