--- a/index.html
+++ b/index.html
@@ -39,17 +39,6 @@
             height: 100%;
         }
 
-        hr {
-            display: block;
-            margin-top: 10px;
-            margin-bottom: 1px;
-            margin-left: auto;
-            margin-right: auto;
-            border-style: inset;
-            border-color: #444;
-            border-width: 1px;
-        }
-
         #dropMenu {
             position: fixed;
             opacity: 0.95;
@@ -103,13 +92,14 @@
         }
 
         #details {
+            width:200px;
             position: fixed;
             opacity: 0.95;
-            top: 100px;
-            left: 100px;
+            top: -500px;
+            left: -500px;
             background-color: #444;
-            width: 200px;
             z-index: 10;
+            border: 1px solid black;
             box-shadow: 0px 0px 12px 2px rgba(0, 0, 0, 0.7);
         }
 
@@ -118,9 +108,10 @@
             height: 25px;
             text-align: center;
             font-family: sans-serif;
-            font-size: medium;
+            font-size: small;
             color: #eee;
-            padding: 5% 0%;
+            padding: 10px 0px;
+            margin-right: 30px;
         }
 
         #details #details_dosePerVolume {
@@ -130,20 +121,34 @@
             font-family: sans-serif;
             font-size: medium;
             color: #eee;
-            padding: 5% 0%;
+            padding: 9px 0px;
+            margin-right: 30px;
         }
 
-        #details table {
-            width: 100%;
+        #details #details_line {
+            display: block;
+            margin-top: 10px;
+            margin-bottom: 5px;
+            margin-left: 10px;
+            margin-right: 10px;
+            border-top: 1px solid black;
+        }
+
+
+        #details #details_table {
+
+            margin: 0px 2px 5px 2px;
+            width: 95%;
             border-collapse: collapse;
             border-top: 0px solid red;
+
         }
 
         #details td {
             font-family: sans-serif;
             font-size: small;
             color: #eee;
-            padding: 1% 3%;
+            padding: 1px 5px;
             border: 0px solid red;
         }
 
@@ -208,8 +213,8 @@
         <div id="details">
             <div id="details_organName">name_of_organ</div>
             <div id="details_dosePerVolume">dose_per_volume</div>
-            <hr>
-            <table>
+            <div id="details_line"></div>
+            <table id="details_table">
                 <tr>
                     <td style="text-align: right; color: #ccc;">Volume (cc):</td>
                     <td id="details_volume_val">N/A</td>
