started side navigation

--- a/index.html
+++ b/index.html
@@ -91,8 +91,67 @@
             box-shadow: 4px 0px 13px 2px rgba(0, 0, 0, 0.7);
         }
 
+        #sideMenu_button {
+            position: fixed;
+            top: -3px;
+            right: 10px;
+            color: #eee;
+            font-family: sans-serif;
+            font-size: 30px;
+            cursor: pointer;
+            padding: 0px 5px;
+        }
+
+        .sidenav {
+            height: 100%;
+            width: 0;
+            position: fixed;
+            opacity: 0.95;
+            top: 40;
+            right: 0;
+            background-color: #444;
+            overflow-x: hidden;
+            transition: 0.5s;
+            padding-top: 60px;
+            z-index: 10;
+            box-shadow: 0px 5px 13px 2px rgba(0, 0, 0, 0.7);
+        }
+
+        .sidenav a {
+            padding: 8px 8px 8px 32px;
+            font-family: sans-serif;
+            text-decoration: none;
+            font-size: 25px;
+            color: #eee;
+            display: block;
+            transition: 0.3s;
+        }
+
+        .sidenav a:hover,
+        .offcanvas a:focus {
+            color: #999;
+        }
+
+        .sidenav .closebtn {
+            position: absolute;
+            color: #eee;
+            top: 0;
+            right: 25px;
+            font-size: 36px;
+            margin-left: 50px;
+        }
+
+        @media screen and (max-height: 450px) {
+            .sidenav {
+                padding-top: 15px;
+            }
+            .sidenav a {
+                font-size: 18px;
+            }
+        }
+
         #details {
-            width:200px;
+            width: 200px;
             position: fixed;
             opacity: 0.95;
             top: -500px;
@@ -134,14 +193,11 @@
             border-top: 1px solid black;
         }
 
-
         #details #details_table {
-
             margin: 0px 2px 5px 2px;
             width: 95%;
             border-collapse: collapse;
             border-top: 0px solid red;
-
         }
 
         #details td {
@@ -209,7 +265,16 @@
                     <option value = 15>Patient 15</option>
             </select>
         </div>
-        <div id="navbar"></div>
+        <div id="navbar">
+            <span id="sideMenu_button" onclick="openNav()">&#9776;</span>
+        </div>
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Clients</a>
+            <a href="#">Contact</a>
+        </div>
         <div id="details">
             <div id="details_organName">name_of_organ</div>
             <div id="details_dosePerVolume">dose_per_volume</div>
@@ -259,6 +324,14 @@
         window.dropDown = function(e) {
             //console.log(e.value);
             updateOrder(e.value);
+        }
+
+        function openNav() {
+            document.getElementById("mySidenav").style.width = "300px";
+        }
+
+        function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
         }
     </script>
 </body>
