--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
 
         .sidenav {
             height: 100%;
-            width: 0;
+            width: 350px;
             position: fixed;
             opacity: 0.95;
-            top: 40;
-            right: 0;
+            top: 40px;
+            right: -400px;
             background-color: #444;
             overflow-x: hidden;
             transition: 0.5s;
@@ -117,35 +117,32 @@
             box-shadow: 0px 5px 13px 2px rgba(0, 0, 0, 0.7);
         }
 
-        .sidenav a {
-            padding: 8px 8px 8px 32px;
+        .sidenav .navText {
+            padding: 8px 8px 8px 8px;
             font-family: sans-serif;
             text-decoration: none;
-            font-size: 25px;
+            font-size: medium;
+            font-weight: normal;
             color: #eee;
             display: block;
             transition: 0.3s;
         }
 
-        .sidenav a:hover,
-        .offcanvas a:focus {
-            color: #999;
-        }
-
-        .sidenav .closebtn {
-            position: absolute;
+        .sidenav #colorScale {
+            width: 326px;
+            height: 40px;
+            margin: 2px auto 2px auto;
+            border: 1px solid black;
             color: #eee;
-            top: 0;
-            right: 25px;
-            font-size: 36px;
-            margin-left: 50px;
+            display: block;
+            transition: 0.3s;
         }
 
         @media screen and (max-height: 450px) {
             .sidenav {
                 padding-top: 15px;
             }
-            .sidenav a {
+            .sidenav .navText {
                 font-size: 18px;
             }
         }
@@ -266,14 +263,11 @@
             </select>
         </div>
         <div id="navbar">
-            <span id="sideMenu_button" onclick="openNav()">&#9776;</span>
+            <span id="sideMenu_button" onclick="handleSideNav()">&#9776;</span>
         </div>
         <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Clients</a>
-            <a href="#">Contact</a>
+            <div class="navText">Color Scale</div>
+            <div id="colorScale"></div>
         </div>
         <div id="details">
             <div id="details_organName">name_of_organ</div>
@@ -326,12 +320,21 @@
             updateOrder(e.value);
         }
 
-        function openNav() {
-            document.getElementById("mySidenav").style.width = "300px";
-        }
+        //maybe include onmouseleave="handleSideNav()" in sidenav
+        var sideNavClosed = 1;
 
-        function closeNav() {
-            document.getElementById("mySidenav").style.width = "0";
+        function handleSideNav() {
+
+            if (sideNavClosed) {
+                //document.getElementById("mySidenav").style.width = "350px";
+                document.getElementById("mySidenav").style.right = "0px";
+                sideNavClosed = !sideNavClosed;
+            } else {
+                //document.getElementById("mySidenav").style.width = "0";
+                document.getElementById("mySidenav").style.right = "-400px";
+                sideNavClosed = !sideNavClosed;
+            }
+
         }
     </script>
 </body>
