--- a/index.html
+++ b/index.html
@@ -94,12 +94,16 @@
         #sideMenu_button {
             position: fixed;
             top: -3px;
-            right: 10px;
+            right: 0px;
             color: #eee;
             font-family: sans-serif;
             font-size: 30px;
             cursor: pointer;
-            padding: 0px 5px;
+            padding: 0px 12px;
+        }
+
+        #sideMenu_button:hover {
+            background-color: #666;
         }
 
         .sidenav {
@@ -112,13 +116,13 @@
             background-color: #444;
             overflow-x: hidden;
             transition: 0.5s;
-            padding-top: 60px;
+            padding-top: 20px;
             z-index: 10;
             box-shadow: 0px 5px 13px 2px rgba(0, 0, 0, 0.7);
         }
 
         .sidenav .navText {
-            padding: 8px 8px 8px 8px;
+            padding: 8px 10px 8px 10px;
             font-family: sans-serif;
             text-decoration: none;
             font-size: medium;
@@ -205,6 +209,52 @@
             border: 0px solid red;
         }
 
+        #alt_details_organName {
+            width: 100%;
+            height: 25px;
+            text-align: center;
+            font-family: sans-serif;
+            font-size: small;
+            color: #eee;
+            padding: 10px 0px;
+            margin-right: 30px;
+        }
+
+        #alt_details_dosePerVolume {
+            width: 100%;
+            height: 25px;
+            text-align: center;
+            font-family: sans-serif;
+            font-size: medium;
+            color: #eee;
+            padding: 9px 0px;
+            margin-right: 30px;
+        }
+
+        #alt_details_line {
+            display: block;
+            margin-top: 10px;
+            margin-bottom: 5px;
+            margin-left: 10px;
+            margin-right: 10px;
+            border-top: 1px solid black;
+        }
+
+        #alt_details_table {
+            margin: 0px 2px 5px 2px;
+            width: 95%;
+            border-collapse: collapse;
+            border-top: 0px solid red;
+        }
+
+        #alt_details_table td {
+            font-family: sans-serif;
+            font-size: small;
+            color: #eee;
+            padding: 1px 5px;
+            border: 0px solid red;
+        }
+
         .list-item {
             position: relative;
             display: inline-block;
@@ -235,6 +285,7 @@
             margin-top: 0.5em;
             float: right;
         }
+
     </style>
 </head>
 
@@ -336,6 +387,7 @@
             }
 
         }
+
     </script>
 </body>
 
