--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel='shortcut icon' type='image/x-icon' href='data/node.ico' />
+    <link rel='shortcut icon' type='image/x-icon' href='resources/node.ico' />
     <title>CAMP-RT</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
@@ -329,7 +329,7 @@
         </div>
     </div>
 
-    <script src="build/three.js"></script>
+    <script src="js/three/three.js"></script>
     <script src="js/controls/OrbitControls.js"></script>
 
     <script src="js/Detector.js"></script>
