--- a/index.html
+++ b/index.html
@@ -40,12 +40,11 @@
         }
 
         #dropMenu {
-            position: fixed;
-            opacity: 0.95;
+            position: absolute;
             top: 3px;
             left: 3px;
-            z-index: 10;
-            box-shadow: 0px 0px 12px 5px rgba(0, 0, 0, 0.7);
+            opacity: 0.95;
+            z-index: 11;
         }
 
         select {
@@ -80,15 +79,15 @@
             position: fixed;
             opacity: 0.95;
             top: 0px;
-            left: 131px;
+            left: 0px;
             background-color: #444;
             width: 100%;
             height: 37px;
             border-left-style: solid;
-            border-left-width: 2px;
+            border-left-width: 0px;
             border-left-color: #444;
             z-index: 10;
-            box-shadow: 4px 0px 13px 2px rgba(0, 0, 0, 0.7);
+            box-shadow: 0px 0px 13px 2px rgba(0, 0, 0, 0.7);
         }
 
         #sideMenu_button {
@@ -293,11 +292,11 @@
     <canvas id="c"></canvas>
 
     <div id="content">
-        <div id="dropMenu">
-            <select id="patientMenu" onchange="dropDown(this);">
-            </select>
-        </div>
         <div id="navbar">
+            <div id="dropMenu">
+                <select id="patientMenu" onchange="dropDown(this);">
+            </select>
+            </div>
             <span id="sideMenu_button" onclick="handleSideNav()">&#9776;</span>
         </div>
         <div id="mySidenav" class="sidenav">
