integrated new organ positions

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
     <script src="js/d3/d3.min.js"></script>
 
     <script src="js/THREEx.KeyboardState.js"></script>
-    <script src="js/loaders/OBJLoader.js"></script>
+    <script src="js/loaders/STLLoader.js"></script>
 
     <script id="template" type="notjs">
         <div class="scene"></div>
@@ -345,7 +345,6 @@
         <div class="pScore">!</div>
         <div style="clear: both;"></div>
     </script>
-
 
     <script type="text/javascript" src="camprt.js"></script>
 
@@ -369,7 +368,6 @@
 
             sideNavClosed = !sideNavClosed;
         }
-
     </script>
 </body>
 
