--- a/index.html
+++ b/index.html
@@ -131,9 +131,12 @@
             transition: 0.3s;
         }
 
-        .sidenav #colorScale {
-            width: 326px;
-            height: 40px;
+        #colorScale {
+            position: absolute;
+            top: 1px;
+            right: 70px;
+
+            height: 30px;
             margin: 2px auto 2px auto;
             border: 1px solid black;
             color: #eee;
@@ -297,11 +300,12 @@
                 <select id="patientMenu" onchange="dropDown(this);">
             </select>
             </div>
+            <div id="colorScale"></div>
             <span id="sideMenu_button" onclick="handleSideNav()">&#9776;</span>
         </div>
         <div id="mySidenav" class="sidenav">
-            <div class="navText">Color Scale</div>
-            <div id="colorScale"></div>
+            <!--<div class="navText">Color Scale</div>
+            <div id="colorScale"></div> -->
         </div>
         <div id="details">
             <div id="details_organName">name_of_organ</div>
