--- a/index.html
+++ b/index.html
@@ -83,9 +83,6 @@
             background-color: #444;
             width: 100%;
             height: 37px;
-            border-left-style: solid;
-            border-left-width: 0px;
-            border-left-color: #444;
             z-index: 10;
             box-shadow: 0px 0px 13px 2px rgba(0, 0, 0, 0.7);
         }
@@ -105,7 +102,7 @@
             background-color: #666;
         }
 
-        .sidenav {
+        #mySidenav {
             height: 100%;
             width: 350px;
             position: fixed;
@@ -120,7 +117,7 @@
             box-shadow: 0px 5px 13px 2px rgba(0, 0, 0, 0.7);
         }
 
-        .sidenav .navText {
+        #mySidenav .navText {
             padding: 8px 10px 8px 10px;
             font-family: sans-serif;
             text-decoration: none;
@@ -135,7 +132,6 @@
             position: absolute;
             top: 1px;
             right: 70px;
-
             height: 30px;
             margin: 2px auto 2px auto;
             border: 1px solid black;
@@ -145,10 +141,10 @@
         }
 
         @media screen and (max-height: 450px) {
-            .sidenav {
+            .mySidenav {
                 padding-top: 15px;
             }
-            .sidenav .navText {
+            .mySidenav .navText {
                 font-size: 18px;
             }
         }
@@ -286,7 +282,6 @@
             margin-top: 0.5em;
             float: right;
         }
-
     </style>
 </head>
 
@@ -359,11 +354,10 @@
         }
 
         //maybe include onmouseleave="handleSideNav()" in sidenav
-        var sideNavClosed = 1;
+        var sideNavClosed = true;
+        var sideNav = document.getElementById("mySidenav");
 
         function handleSideNav() {
-
-            var sideNav = document.getElementById("mySidenav");
 
             if (sideNavClosed)
                 sideNav.style.right = "0px";
