functions modified to support new data structure

--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
             margin-top: 0.5em;
             float: right;
         }
+
     </style>
 </head>
 
@@ -340,7 +341,7 @@
 
     <script id="template" type="notjs">
         <div class="scene"></div>
-        <div class="description">Patient $</div>
+        <div class="description">$</div>
         <div class="pScore">!</div>
         <div style="clear: both;"></div>
     </script>
@@ -366,6 +367,7 @@
 
             sideNavClosed = !sideNavClosed;
         }
+
     </script>
 </body>
 
