--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         }
 
         #mySidenav {
+            padding: 0px 15px 0px 15px;
             height: 100%;
             width: 350px;
             position: fixed;
@@ -118,7 +119,7 @@
         }
 
         #mySidenav .navText {
-            padding: 8px 10px 8px 10px;
+            padding: 8px 0px 8px 0px;
             font-family: sans-serif;
             text-decoration: none;
             font-size: medium;
@@ -126,6 +127,12 @@
             color: #eee;
             display: block;
             transition: 0.3s;
+        }
+
+        #masterList {
+            width: 100%;
+            height: 100%;
+            border: 0px solid red;
         }
 
         #colorScale {
@@ -282,7 +289,6 @@
             margin-top: 0.5em;
             float: right;
         }
-
     </style>
 </head>
 
@@ -302,6 +308,8 @@
         <div id="mySidenav" class="sidenav">
             <!--<div class="navText">Color Scale</div>
             <div id="colorScale"></div> -->
+            <div class="navText">Organs</div>
+            <div id="masterList" class="navText"></div>
         </div>
         <div id="details">
             <div id="details_organName">name_of_organ</div>
@@ -367,7 +375,6 @@
 
             sideNavClosed = !sideNavClosed;
         }
-
     </script>
 </body>
 
