alternating background color for organ master list in side menu

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             height: 100%;
             width: 350px;
             position: fixed;
-            opacity: .97;
+            opacity: .98;
             top: 40px;
             right: -400px;
             background-color: #444;
@@ -147,6 +147,8 @@
             padding-bottom: 3px;
             padding-left: 10px;
         }
+
+        .checkboxContainer:hover {}
 
         label {
             padding-left: 15px;
@@ -307,7 +309,6 @@
             margin-top: 0.5em;
             float: right;
         }
-
     </style>
 </head>
 
@@ -402,7 +403,6 @@
 
 
         }
-
     </script>
 </body>
 
