--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             top: 0px;
             width: 100%;
             z-index: 1;
-            padding: 3em 0 0 0;
+            padding: 7em 0 0 0;
         }
 
         a {
@@ -41,7 +41,7 @@
 
         #dropMenu {
             position: absolute;
-            top: 3px;
+            top: 46px;
             left: 3px;
             opacity: 0.95;
             z-index: 11;
@@ -82,14 +82,15 @@
             left: 0px;
             background-color: #444;
             width: 100%;
-            height: 37px;
+            height: 80px;
             z-index: 10;
             box-shadow: 0px 0px 13px 2px rgba(0, 0, 0, 0.7);
+            text-align: center;
         }
 
         #sideMenu_button {
             position: fixed;
-            top: -3px;
+            top: 45px;
             right: 0px;
             color: #eee;
             font-family: sans-serif;
@@ -104,11 +105,11 @@
 
         #mySidenav {
             padding: 0px 15px 0px 15px;
-            height: 100%;
+            height: 75%;
             width: 350px;
             position: fixed;
             opacity: .98;
-            top: 40px;
+            top: 83px;
             right: -400px;
             background-color: #444;
             overflow-x: hidden;
@@ -155,15 +156,65 @@
         }
 
         #colorScale {
-            position: absolute;
-            top: 1px;
-            right: 70px;
+            position: relative;
+            top: 10px;
             height: 30px;
             margin: 2px auto 2px auto;
             border: 1px solid black;
             color: #eee;
-            display: block;
+            display: inline-block;
             transition: 0.3s;
+            cursor: crosshair;
+        }
+
+        .scaleLabels {
+            position: absolute;
+            top: 30px;
+            width: 30px;
+            height: 20px;
+            text-align: left;
+            font-family: sans-serif;
+            font-size: small;
+            color: white;
+            background-color: #444;
+            border-left: 1px solid black;
+            padding-left: 5px;
+            padding-top: 3px;
+            z-index: 11;
+        }
+
+        #unitLabel {
+            position: absolute;
+            right: -56px;
+            top: -1px;
+            width: 55px;
+            height: 30px;
+            text-align: left;
+            font-family: sans-serif;
+            font-size: small;
+            line-height: 30px;
+            color: white;
+            background-color: #444;
+            padding: 0px 5px;
+            z-index: 11;
+        }
+
+        #colorScaleDetails {
+            position: absolute;
+            top: 30px;
+            width: 40px;
+            height: 30px;
+            text-align: left;
+            font-family: sans-serif;
+            font-size: medium;
+            color: #00e4ff;
+            background-color: #444;
+            border-left: 1px solid black;
+            padding-left: 5px;
+            padding-top: 12px;
+            z-index: 12;
+            display: none;
+            opacity: .9;
         }
 
         @media screen and (max-height: 450px) {
@@ -322,7 +373,15 @@
                 <select id="patientMenu" onchange="dropDown(this);">
             </select>
             </div>
-            <div id="colorScale"></div>
+            <div id="colorScale">
+                <div id="colorScaleDetails"></div>
+                <div id="unitLabel">(GY/cc)</div>
+                <div class="scaleLabels" style="left: 0px;">0</div>
+                <div class="scaleLabels" style="left: 100px;">5</div>
+                <div class="scaleLabels" style="left: 200px;">10</div>
+                <div class="scaleLabels" style="left: 280px;">50</div>
+                <div class="scaleLabels" style="left: 340px;">100</div>
+            </div>
             <span id="sideMenu_button" onclick="handleSideNav()">&#9776;</span>
         </div>
         <div id="mySidenav" class="sidenav">
