update color scale

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
         #colorScale {
             position: relative;
-            top: 10px;
+            top: 22px;
             height: 30px;
             margin: 2px auto 2px auto;
             border: 1px solid black;
@@ -165,6 +165,7 @@
             display: inline-block;
             transition: 0.3s;
             cursor: crosshair;
+            z-index: 11;
         }
 
         .scaleLabels {
@@ -201,17 +202,17 @@
 
         #colorScaleDetails {
             position: absolute;
-            top: 30px;
+            top: -21px;
             width: 40px;
-            height: 30px;
+            height: 20px;
             text-align: left;
             font-family: sans-serif;
-            font-size: medium;
+            font-size: small;
             color: #00e4ff;
             background-color: #444;
             border-left: 1px solid black;
             padding-left: 5px;
-            padding-top: 12px;
+            padding-top: 3px;
             z-index: 12;
             display: none;
             opacity: .9;
