--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
         #dropMenu {
             position: absolute;
-            top: 46px;
-            left: 3px;
+            bottom: 3px;
+            left: 10px;
             opacity: 0.95;
             z-index: 11;
         }
@@ -54,7 +54,7 @@
             font-family: sans-serif;
             font-size: medium;
             font-weight: lighter;
-            text-align: center;
+            /*text-align: center;*/
             width: 125px;
             height: 31px;
             -webkit-border-radius: 0px;
@@ -67,6 +67,7 @@
         select:hover {
             background-color: #666;
             outline-color: #666;
+            /*text-align: center;*/
         }
 
         option:checked,
@@ -89,9 +90,9 @@
         }
 
         #sideMenu_button {
-            position: fixed;
-            top: 45px;
-            right: 0px;
+            position: absolute;
+            bottom: 0px;
+            right: 10px;
             color: #eee;
             font-family: sans-serif;
             font-size: 30px;
@@ -361,6 +362,7 @@
             margin-top: 0.5em;
             float: right;
         }
+
     </style>
 </head>
 
@@ -463,6 +465,7 @@
 
 
         }
+
     </script>
 </body>
 
