--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
             z-index: 11;
         }
 
+        #loadScreen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            color: #eee;
+            font-family: sans-serif;
+            font-size: large;
+            text-align: center;
+            background-color: #444;
+            z-index: 100;
+        }
+
         select {
             cursor: pointer;
             color: #eee;
@@ -370,6 +384,10 @@
 
     <canvas id="c"></canvas>
 
+    <div id="loadScreen">
+        <div style="position: relative; top: 200px;">loading...</div>
+    </div>
+
     <div id="content">
         <div id="navbar">
             <div id="dropMenu">
@@ -404,15 +422,15 @@
                     <td id="details_volume_val">N/A</td>
                 </tr>
                 <tr>
-                    <td style="text-align: right; color: #ccc;">Mean Dose (GY):</td>
-                    <td id="details_meanDose_val">N/A</td>
-                </tr>
-                <tr>
-                    <td style="text-align: right; color: #ccc;">Min Dose (GY):</td>
+                    <td style="text-align: right; color: #ccc;">Min (GY):</td>
                     <td id="details_minDose_val">N/A</td>
                 </tr>
                 <tr>
-                    <td style="text-align: right; color: #ccc;">Max Dose (GY):</td>
+                    <td style="text-align: right; color: #ccc;">Mean (GY):</td>
+                    <td id="details_meanDose_val">N/A</td>
+                </tr>
+                <tr>
+                    <td style="text-align: right; color: #ccc;">Max (GY):</td>
                     <td id="details_maxDose_val">N/A</td>
                 </tr>
             </table>
