--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
             color: #eee;
             padding: 9px 0px;
             margin-right: 30px;
+            margin-bottom: 10px;
         }
 
         #details #details_line {
@@ -380,6 +381,11 @@
             float: right;
         }
 
+        .hide {
+
+            display: none !important;
+
+        }
     </style>
 </head>
 
@@ -420,8 +426,8 @@
         <div id="details" onmousemove="onHideDetails()">
             <div id="details_organName">name_of_organ</div>
             <div id="details_dosePerVolume">dose_per_volume</div>
-            <div id="details_line"></div>
-            <table id="details_table">
+            <div class="hide" id="details_line"></div>
+            <table class="hide" id="details_table">
                 <tr>
                     <td style="text-align: right; color: #ccc;">Volume (cc):</td>
                     <td id="details_volume_val">N/A</td>
@@ -489,7 +495,6 @@
 
 
         }
-
     </script>
 </body>
 
