--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
 
         .checkboxContainer:hover {}
 
+        .checkbox_group {}
+
         label {
             padding-left: 15px;
         }
