--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         #mySidenav .navText {
             padding: 8px 0px 8px 0px;
             font-family: sans-serif;
-            text-decoration: none;
+            text-decoration: underline;
             text-align: right;
             font-size: medium;
             font-weight: normal;
@@ -169,9 +169,12 @@
 
         .checkbox_group {}
 
-        label {
-            padding-left: 15px;
+        .dummy {
+            height: 15px;
+            width: 100%;
         }
+
+        .label {}
 
         #colorScale {
             position: relative;
