--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             top: 0px;
             width: 100%;
             z-index: 1;
-            padding: 7em 0 0 0;
+            padding: 7em 0 3em 0;
         }
 
         a {
@@ -391,6 +391,7 @@
             display: none !important;
 
         }
+
     </style>
 </head>
 
@@ -451,6 +452,13 @@
                 </tr>
             </table>
         </div>
+
+        <div style="position: absolute; bottom: 3px; right: 20px;">
+
+            <p style="color: rgb(100,100,100); font-size: 13px;">Showing 32 out of 101 patients</p>
+
+        </div>
+
     </div>
 
     <script src="js/three/three.js"></script>
@@ -462,7 +470,7 @@
     <script src="js/d3/d3.min.js"></script>
 
     <script src="js/THREEx.KeyboardState.js"></script>
-    <script src="js/loaders/STLLoader.js"></script>
+    <script src="js/loaders/VTKLoader.js"></script>
 
     <script id="template" type="notjs">
         <div class="scene"></div>
@@ -500,6 +508,7 @@
 
 
         }
+
     </script>
 </body>
 
