updated loading screen

--- a/index.html
+++ b/index.html
@@ -497,6 +497,7 @@
 
     <div id="loadScreen">
         <div style="position: relative; top: 200px;">loading...</div>
+        <div style="position: relative; top: 220px;" id="loadProgress">0%</div>
     </div>
 
     <div id="content">
