using ssim algorithm, plus minor updates

--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
             height: 100%;
             color: #eee;
             font-family: sans-serif;
+            font-weight: bold;
             font-size: large;
             text-align: center;
-            background-color: #444;
+            background-color: rgba(68, 68, 68, 0.99);
             z-index: 100;
         }
 
@@ -488,7 +489,6 @@
             background: #00e4ff;
             cursor: crosshair;
         }
-
     </style>
 </head>
 
@@ -688,7 +688,6 @@
 
 
         }
-
     </script>
 </body>
 
