ui updates, interaction and hover fixes

--- a/index.html
+++ b/index.html
@@ -183,6 +183,10 @@
         .checkboxContainer:hover {}
 
         .checkbox_group {}
+        
+        .GroupChildren:nth-child(odd) {
+            background-color: #3b3b3b;
+        }
 
         .dummy {
             height: 15px;
