minor ui updates

--- a/index.html
+++ b/index.html
@@ -99,10 +99,11 @@
 
         #navbar {
             position: fixed;
-            opacity: 0.95;
+            opacity: 0.97;
             top: 0px;
             left: 0px;
             background-color: #444;
+            border-bottom: 1px solid rgb(30, 30, 30);
             width: 100%;
             min-width: 1130px;
             /*height: 80px;*/
@@ -138,10 +139,11 @@
             height: 75%;
             width: 350px;
             position: fixed;
-            opacity: .98;
+            opacity: .97;
             top: 63px;
             right: -400px;
             background-color: #444;
+            border: 1px solid rgb(30, 30, 30);
             overflow-x: hidden;
             overflow-y: auto;
             transition: 0.5s;
