--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
         .scaleLabels {
             position: absolute;
-            top: 30px;
+            top: -21px;
             width: 30px;
             height: 20px;
             text-align: left;
@@ -249,19 +249,18 @@
         #colorScaleDetails {
             position: absolute;
             top: -21px;
-            width: 40px;
+            width: 60px;
             height: 20px;
             text-align: left;
             font-family: sans-serif;
             font-size: small;
             color: #00e4ff;
-            background-color: #444;
+            background-color: rgba(68, 68, 68, 0.65);
             border-left: 1px solid black;
             padding-left: 5px;
             padding-top: 3px;
             z-index: 12;
             display: none;
-            opacity: .9;
         }
 
         @media screen and (max-height: 450px) {
@@ -539,13 +538,13 @@
             <div id="colorScale">
                 <div id="colorScaleDetails"></div>
                 <div id="unitLabel">(GY)</div>
-                <!--
+
                 <div class="scaleLabels" style="left: 0px;">0</div>
-                <div class="scaleLabels" style="left: 100px;">5</div>
+                <!--<div class="scaleLabels" style="left: 100px;">5</div>
                 <div class="scaleLabels" style="left: 200px;">10</div>
-                <div class="scaleLabels" style="left: 280px;">50</div>
-                <div class="scaleLabels" style="left: 340px;">100</div>
-                -->
+                <div class="scaleLabels" style="left: 280px;">50</div>-->
+                <div class="scaleLabels" style="right: -30px;">108</div>
+
             </div>
             <div style="position: absolute; right: 10px; bottom: 5px; width: auto; height: 31px; border: 0px solid red;">
                 <div style="float: left; border: 2px solid rgb(30, 30, 30); padding: 0px 20px 0px 5px; border-right-width: 0px;">
