--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             transition: 0.5s;
             padding-top: 20px;
             z-index: 10;
-            box-shadow: 0px 5px 13px 2px rgba(0, 0, 0, 0.7);
+            box-shadow: 0px 0px 13px 2px rgba(0, 0, 0, 0.7);
         }
 
         #mySidenav .navText {
@@ -558,8 +558,8 @@
         </div>
         <div id="mySidenav" class="sidenav">
             <!--<div class="navText">Color Scale</div>
-            <div id="colorScale"></div> -->
-            <div class="navText">Organs</div>
+            <div id="colorScale"></div>
+            <div class="navText">Organs</div> -->
             <div id="masterList"></div>
             <div style="height: 200px; width: 100%;"></div>
         </div>
