changed some formatting

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div style="position: relative; top: 220px;" id="loadProgress">0 %</div>
     </div>
 	<div id="leftContent">
-		<div id="differenceScene"></div>
+		<div id="differenceScene" style="margin:0;padding:0;"></div>
 	</div>
     <div id="topBar">
         <div id="lineChartsContainer">
@@ -233,7 +233,7 @@
         }
 
     </script>
-
+	<script type="text/javascript" src="dose_scatterplot.js"></script>
     <script type="text/javascript" src="camprt.js"></script>
 
 </body>
