--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <canvas id="c2"></canvas>
             <div id="pTarget_chart"></div>
             <div id="pPrediction_chart"></div>
-            <div style="display: inline-block; position: relative; top: 25px; margin: auto; margin-left: 15px; width: auto; height: auto; border: 0px solid red;">
+            <div style="display: inline-block; position: relative; top:65px; margin: auto;width: auto; height: auto; border: 0px solid red;">
                 <div id="colorScale2">
                     <div id="colorScaleDetails2"></div>
                     <div id="unitLabel2">(GY)</div>
@@ -41,7 +41,8 @@
                 </div>
                 <div id="pDifference_chart"></div>
             </div>
-
+			<div id="bubbleChart">
+            </div>
         </div>
         <div id="navbar">
             <div id="dropMenu">
@@ -117,7 +118,7 @@
 	<div id="content">
 	</div>
 	<div class='tooltip' style='visibility:hidden;'></div>
-
+	<div class='bubbletooltip' style='visibility:hidden;'></div>
     <script src="js/three/three.js"></script>
     <script src="js/controls/OrbitControls.js"></script>
 
@@ -234,6 +235,7 @@
 		
     </script>
 	<script type="text/javascript" src="dose_scatterplot.js"></script>
+	<script type="text/javascript" src="BubblePlot.js"></script>
     <script type="text/javascript" src="camprt.js"></script>
 
 </body>
