added curves around classes and a tumor volumes scatter view

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 		<div id="differenceScene" style="margin:0;padding:0;"></div>
 		<div id="organErrorViz">
 		
-			<button class='button' id="doseScatterButton">Organ Dose</button>
-			<button class='button' id="distanceScatterButton">Tumor-Organ Distance</button>
+			<button class='scatterButton button' id="doseScatterButton">Organ Dose</button>
+			<button class='scatterButton button' id="distanceScatterButton">Tumor-Organ Distance</button>
+			<button class='scatterButton button' id="stagingScatterButton">Tumor Volumes (log)</button>
         </div>
 	</div>
     <div id="topBar">
