--- a/index.html
+++ b/index.html
@@ -10,23 +10,12 @@
 </head>
 
 <body>
-
-    <canvas id="c"></canvas>
-
     <div id="loadScreen">
         <div style="position: relative; top: 200px;">loading...</div>
         <div style="position: relative; top: 220px;" id="loadProgress">0 %</div>
     </div>
-	<div id="leftContent">
-		<div id="differenceScene" style="margin:0;padding:0;"></div>
-		<div id="organErrorViz">
-		
-			<button class='scatterButton button' id="doseScatterButton">Organ Dose</button>
-			<button class='scatterButton button' id="distanceScatterButton">Tumor-Organ Distance</button>
-			<button class='scatterButton button' id="stagingScatterButton">Tumor Volumes (log)</button>
-        </div>
-	</div>
-    <div id="topBar">
+	
+	<div id="topBar">
         <div id="lineChartsContainer">
             <canvas id="c2"></canvas>
             <div id="pTarget_chart"></div>
@@ -41,8 +30,6 @@
 
                 </div>
                 <div id="pDifference_chart"></div>
-            </div>
-			<div id="bubbleChart">
             </div>
         </div>
         <div id="navbar">
@@ -116,8 +103,22 @@
         </div>
 
     </div>
-	<div id="content">
+	<div id="leftContent">
+		<div id="organErrorViz">
+			<button class='scatterButton button' id="doseScatterButton">Organ Dose</button>
+			<button class='scatterButton button' id="distanceScatterButton">Tumor Distance</button>
+			<button class='scatterButton button' id="stagingScatterButton">Tumor Volumes</button>
+        </div>
+		<div id="bubbleChart">
+        </div>
 	</div>
+	
+	<div id="content">
+		<canvas id="c"></canvas>
+		<div id="differenceScene" style='margin:0;padding:0;'></div>
+	</div>
+	
+	
 	<div class='tooltip' style='visibility:hidden;'></div>
 	<div class='bubbletooltip' style='visibility:hidden;'></div>
     <script src="js/three/three.js"></script>
