some resizing and encapsulation and brushing and linking action

--- a/index.html
+++ b/index.html
@@ -236,6 +236,8 @@
         }
 		
     </script>
+	<script type="text/javascript" src="controller.js"></script>
+	<script type="text/javascript" src="DataModel.js"></script>
 	<script type="text/javascript" src="dose_scatterplot.js"></script>
 	<script type="text/javascript" src="BubblePlot.js"></script>
     <script type="text/javascript" src="camprt.js"></script>
