fixed some tooltip details for prediction/error views

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div id="masterList"></div>
             <div style="height: 200px; width: 100%;"></div>
         </div>
-        <div id="details" onmousemove="onHideDetails()">
+        <div id="details">
             <div id="details_organName">name_of_organ</div>
             <!--<div id="details_dosePerVolume">dose_per_volume</div>-->
             <div id="details_meanDose_val">N/A</div>
