fixed more styling for selection tabs

--- a/index.html
+++ b/index.html
@@ -113,8 +113,10 @@
 
 
     <script id="template" type="notjs">
-        <div class="description">$</div>
-        <div class="pScore">!</div>
+		<div class='patientSceneTop'>
+			<div class="description">$</div>
+			<div class="pScore">!</div>
+		</div>
         <div style="clear: both;"></div>
         <div class="scene"></div>
         <div class="info">
