--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 				<button class='scatterButton button' id="distanceScatterButton">Tumor Distance</button>
 				<button class='scatterButton button' id="doseScatterButton">Organ Dose</button>
 				<button class='scatterButton button' id="stagingScatterButton">Tumor Volumes</button>
+				<button class='scatterButton button' id="similarityScatterButton">Similarity</button>
 			</div>
         </div>
 		<div id="bubbleChart">
